Fixing tile alignment with flex

--- a/content-assets/wai-aria-practices/styles.css
+++ b/content-assets/wai-aria-practices/styles.css
@@ -129,6 +129,7 @@ li.tile h2.tile-name {
   margin: 0;
   border: none;
   display: flex;
+  align-items: flex-start;
 }
 
 li.tile img {
